--- a/Views/Dazmal/Index.cshtml
+++ b/Views/Dazmal/Index.cshtml
@@ -1,6 +1,7 @@
 <!-- Views/Dazmal/Index.cshtml - TAM KOD -->
 @model List<Dazmal>
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Dazmal İşlemleri";
 }
 
