--- a/Views/Ekleme/Index.cshtml
+++ b/Views/Ekleme/Index.cshtml
@@ -1,6 +1,7 @@
 <!-- Views/Ekleme/Index.cshtml - TAM KOD -->
 @model List<Ekleme>
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Ekleme İşlemleri";
 }
 
